--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <div class="logos-header">
-      <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg" id="menu">
+      <svg width="16" height="15" xmlns="http://www.w3.org/2000/svg" id="menu-icon">
         <path d="M16 12v3H0v-3h16Zm0-6v3H0V6h16Zm0-6v3H0V0h16Z" fill="#69707D" fill-rule="evenodd"/>
       </svg>
       <svg width="138" height="20" xmlns="http://www.w3.org/2000/svg" id="marca">
@@ -55,13 +55,9 @@
   </header>
   <main>
     <section>
-      <img src="./images/image-product-1.jpg" alt="imagen del producto" id="#img-principal">
-      <svg width="12" height="18" xmlns="http://www.w3.org/2000/svg">
-      <path d="M11 1 3 9l8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/>
-      </svg>
-      <svg width="13" height="18" xmlns="http://www.w3.org/2000/svg">
-      <path d="m2 1 8 8-8 8" stroke="#1D2026" stroke-width="3" fill="none" fill-rule="evenodd"/>
-      </svg>
+      <img src="./images/image-product-1.jpg" alt="imagen del producto" id="img-principal">
+      <i class="bi bi-arrow-left-circle prev"></i>
+      <i class="bi bi-arrow-right-circle next"></i>
       <div class="img-miniaturas">
         <img src="./images/image-product-1-thumbnail.jpg" alt="imagen 1 producto">
         <img src="./images/image-product-2-thumbnail.jpg" alt="imagen 2 producto">
@@ -69,32 +65,34 @@
         <img src="./images/image-product-4-thumbnail.jpg" alt="imagen 4 producto">
       </div>
     </section>
-    <h6>Sneaker Company</h6>
-    <h1>Fall Limited Edition Sneakers</h1>
-    <p>These low-profile sneakers are your perfect casual wear companion. Featuring a 
+    <section class="section-info-art">
+      <h6>Sneaker Company</h6>
+      <h1>Fall Limited Edition Sneakers</h1>
+      <p>These low-profile sneakers are your perfect casual wear companion. Featuring a 
       durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
-    <div id="price">
-      <h2>$125.00</h2>
-      <span>50%</span>
-      <span>$250.00</span>
-    </div>
-    <form>
-      <div class="cantidad">
-        <input type="number">
-      <svg width="12" height="4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <defs><path d="M11.357 3.332A.641.641 0 0 0 12 2.69V.643A.641.641 0 0 0 11.357 0H.643A.641.641 0 0 0 0 .643v2.046c0 .357.287.643.643.643h10.714Z" id="a"/></defs><use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#a"/>
-      </svg>
-      <svg width="12" height="12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <defs><path d="M12 7.023V4.977a.641.641 0 0 0-.643-.643h-3.69V.643A.641.641 0 0 0 7.022 0H4.977a.641.641 0 0 0-.643.643v3.69H.643A.641.641 0 0 0 0 4.978v2.046c0 .356.287.643.643.643h3.69v3.691c0 .356.288.643.644.643h2.046a.641.641 0 0 0 .643-.643v-3.69h3.691A.641.641 0 0 0 12 7.022Z" id="b"/></defs><use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#b"/>
-      </svg>
+      <div id="price">
+        <h2>$125.00</h2>
+        <p class="descuento">50%</p>
+        <p class="old-price">$250.00</p>
       </div>
-      <button>
-        <svg width="22" height="20" xmlns="http://www.w3.org/2000/svg">
-        <path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#69707D" fill-rule="nonzero"/>
-        </svg>
-        Add to cart
-      </button>
-    </form>
+      <form>
+        <div class="cantidad">
+          <input type="number">
+          <svg width="12" height="4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="menos">
+        <defs><path d="M11.357 3.332A.641.641 0 0 0 12 2.69V.643A.641.641 0 0 0 11.357 0H.643A.641.641 0 0 0 0 .643v2.046c0 .357.287.643.643.643h10.714Z" id="a"/></defs><use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#a"/>
+          </svg>
+          <svg width="12" height="12" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="mas">
+        <defs><path d="M12 7.023V4.977a.641.641 0 0 0-.643-.643h-3.69V.643A.641.641 0 0 0 7.022 0H4.977a.641.641 0 0 0-.643.643v3.69H.643A.641.641 0 0 0 0 4.978v2.046c0 .356.287.643.643.643h3.69v3.691c0 .356.288.643.644.643h2.046a.641.641 0 0 0 .643-.643v-3.69h3.691A.641.641 0 0 0 12 7.022Z" id="b"/></defs><use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#b"/>
+          </svg>
+        </div>
+        <button>
+          <svg width="22" height="20" xmlns="http://www.w3.org/2000/svg">
+            <path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#ffffff" fill-rule="nonzero"/>
+          </svg>
+          Add to cart
+        </button>
+      </form>
+    </section>
   </main>
   <footer>
     <div class="attribution">
