--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <title>Frontend Mentor | E-commerce product page</title>
+  <title>Frontend Mentor | E-commerce product-name page</title>
   <link rel="stylesheet" href="./sass/style.css">
   <script src="./js/script.js" defer></script>
 </head>
@@ -23,11 +23,11 @@
         <svg width="14" height="15" xmlns="http://www.w3.org/2000/svg" id="close">
           <path d="m11.596.782 2.122 2.122L9.12 7.499l4.597 4.597-2.122 2.122L7 9.62l-4.595 4.597-2.122-2.122L4.878 7.5.282 2.904 2.404.782l4.595 4.596L11.596.782Z" fill="#69707D" fill-rule="evenodd"/>
         </svg>
-        <li>Collections</li>
-        <li>Men</li>
-        <li>Women</li>
-        <li>About</li>
-        <li>Contact</li>
+        <li><a href="#">Collections</a></li>
+        <li><a href="#">Men</a></li>
+        <li><a href="#">Women</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
     <div>
@@ -39,46 +39,50 @@
       <!-- Carrito -->
       <div id="carro">
         <h4>Cart</h4>
+        <!-- Informacion del carrito -->
         <section>
-          <img src="./images/image-product-1-thumbnail.jpg" alt="imagen del producto en el carrito">
-          <div id="cart-info">
-            <h5 id="product-cart">Fall Limited Edition Sneakers</h5>
-            <h5 id="total-cart"><span class="precio-unit">$125.00</span><span class="cantidad-art"> x 3</span><span class="precio-final"> $375.00</span></h5>
+          <img src="./images/image-product-1-thumbnail.jpg" alt="imagen del product-nameo en el carrito">
+          <div>
+            <h5 class="product-name">Fall Limited Edition Sneakers</h5>
+            <h4 id="total-cart">$<span class="precio-unit">125.00</span>x<span class="cantidad-art"> 3</span><span class="precio-final"> $375.00</span></h4>
           </div>
           <svg width="20" height="20" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="desechar">
             <defs><path d="M0 2.625V1.75C0 1.334.334 1 .75 1h3.5l.294-.584A.741.741 0 0 1 5.213 0h3.571a.75.75 0 0 1 .672.416L9.75 1h3.5c.416 0 .75.334.75.75v.875a.376.376 0 0 1-.375.375H.375A.376.376 0 0 1 0 2.625Zm13 1.75V14.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 1 14.5V4.375C1 4.169 1.169 4 1.375 4h11.25c.206 0 .375.169.375.375ZM4.5 6.5c0-.275-.225-.5-.5-.5s-.5.225-.5.5v7c0 .275.225.5.5.5s.5-.225.5-.5v-7Zm3 0c0-.275-.225-.5-.5-.5s-.5.225-.5.5v7c0 .275.225.5.5.5s.5-.225.5-.5v-7Zm3 0c0-.275-.225-.5-.5-.5s-.5.225-.5.5v7c0 .275.225.5.5.5s.5-.225.5-.5v-7Z" id="a"/></defs><use fill="#C3CAD9" fill-rule="nonzero" xlink:href="#a"/>
           </svg>
         </section>
-        <button id="check">Checkout</button>
+        <button id="check-btn">Checkout</button>
       </div>
     </div>
   </header>
   <main>
-    <section>
-      <img src="./images/image-product-1.jpg" alt="imagen del producto" id="img-principal">
+    <!-- Seccion de visualizacion del producto -->
+    <section class="imagenes-art">
+      <img src="./images/image-product-1.jpg" alt="imagen principal del producto" id="img-principal">
       <i class="bi bi-arrow-left-circle prev"></i>
       <i class="bi bi-arrow-right-circle next"></i>
       <div class="img-miniaturas">
-        <img src="./images/image-product-1-thumbnail.jpg" alt="imagen 1 producto">
-        <img src="./images/image-product-2-thumbnail.jpg" alt="imagen 2 producto">
-        <img src="./images/image-product-3-thumbnail.jpg" alt="imagen 3 producto">
-        <img src="./images/image-product-4-thumbnail.jpg" alt="imagen 4 producto">
+        <img src="./images/image-product-1-thumbnail.jpg" alt="imagen 1 del producto">
+        <img src="./images/image-product-2-thumbnail.jpg" alt="imagen 2 del producto">
+        <img src="./images/image-product-3-thumbnail.jpg" alt="imagen 3 del producto">
+        <img src="./images/image-product-4-thumbnail.jpg" alt="imagen 4 del producto">
       </div>
     </section>
+    <!-- Seccion informativa del product-nameo -->
     <section class="section-info-art">
       <h6>Sneaker Company</h6>
-      <h1>Fall Limited Edition Sneakers</h1>
+      <h1 class="product-name">Fall Limited Edition Sneakers</h1>
       <p>These low-profile sneakers are your perfect casual wear companion. Featuring a 
       durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
-      <div id="price">
+      <div>
         <div class="precio-art">
-          <h2>$125.00</h2>
+          <h2>$<span class="precio-unit">125.00</span></h2>
           <p class="descuento">50%</p>
         </div>
-        <p class="old-price">$250.00</p>
+        <p class="old-price">$<span>250.00</span></p>
       </div>
+      <!-- Acá seleccionamos las unidades de articulo que deseamos -->
       <form>
-        <div class="cantidad">
+        <div>
           <input type="number">
           <svg width="12" height="4" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="menos">
         <defs><path d="M11.357 3.332A.641.641 0 0 0 12 2.69V.643A.641.641 0 0 0 11.357 0H.643A.641.641 0 0 0 0 .643v2.046c0 .357.287.643.643.643h10.714Z" id="a"/></defs><use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#a"/>
@@ -87,7 +91,7 @@
         <defs><path d="M12 7.023V4.977a.641.641 0 0 0-.643-.643h-3.69V.643A.641.641 0 0 0 7.022 0H4.977a.641.641 0 0 0-.643.643v3.69H.643A.641.641 0 0 0 0 4.978v2.046c0 .356.287.643.643.643h3.69v3.691c0 .356.288.643.644.643h2.046a.641.641 0 0 0 .643-.643v-3.69h3.691A.641.641 0 0 0 12 7.022Z" id="b"/></defs><use fill="#FF7E1B" fill-rule="nonzero" xlink:href="#b"/>
           </svg>
         </div>
-        <button>
+        <button id="add-cart-btn">
           <svg width="22" height="20" xmlns="http://www.w3.org/2000/svg">
             <path d="M20.925 3.641H3.863L3.61.816A.896.896 0 0 0 2.717 0H.897a.896.896 0 1 0 0 1.792h1l1.031 11.483c.073.828.52 1.726 1.291 2.336C2.83 17.385 4.099 20 6.359 20c1.875 0 3.197-1.87 2.554-3.642h4.905c-.642 1.77.677 3.642 2.555 3.642a2.72 2.72 0 0 0 2.717-2.717 2.72 2.72 0 0 0-2.717-2.717H6.365c-.681 0-1.274-.41-1.53-1.009l14.321-.842a.896.896 0 0 0 .817-.677l1.821-7.283a.897.897 0 0 0-.87-1.114ZM6.358 18.208a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm10.015 0a.926.926 0 0 1 0-1.85.926.926 0 0 1 0 1.85Zm2.021-7.243-13.8.81-.57-6.341h15.753l-1.383 5.53Z" fill="#ffffff" fill-rule="nonzero"/>
           </svg>
