solo falta resolver el lightbox

--- a/index.html
+++ b/index.html
@@ -54,18 +54,19 @@
   <main>
     <!-- Seccion de visualizacion del producto -->
     <section class="main-section1">
-      <img src="./images/image-product-1.jpg" alt="imagen 1 del producto" id="img-1">
-      <img src="./images/image-product-2.jpg" alt="imagen 2 del producto" id="img-2">
-      <img src="./images/image-product-3.jpg" alt="imagen 3 del producto" id="img-3">
-      <img src="./images/image-product-4.jpg" alt="imagen 4 del producto" id="img-4">
-      <i class="bi bi-arrow-left-circle" id="icon-prev"></i>
-      <i class="bi bi-arrow-right-circle" id="icon-next"></i>
       <div class="main-section1-div">
-        <img src="./images/image-product-1-thumbnail.jpg" alt="imagen 1 del producto">
-        <img src="./images/image-product-2-thumbnail.jpg" alt="imagen 2 del producto">
-        <img src="./images/image-product-3-thumbnail.jpg" alt="imagen 3 del producto">
-        <img src="./images/image-product-4-thumbnail.jpg" alt="imagen 4 del producto">
+        <img src="./images/image-product-1.jpg" alt="imagen 1 del producto" id="img-1">
+        <img src="./images/image-product-2.jpg" alt="imagen 2 del producto" id="img-2">
+        <img src="./images/image-product-3.jpg" alt="imagen 3 del producto" id="img-3">
+        <img src="./images/image-product-4.jpg" alt="imagen 4 del producto" id="img-4">
+        <i class="bi bi-arrow-left-circle" id="icon-prev"></i>
+        <i class="bi bi-arrow-right-circle" id="icon-next"></i>
+
       </div>
+      <img src="./images/image-product-1-thumbnail.jpg" alt="imagen 1 del producto" id="img-min-1">
+      <img src="./images/image-product-2-thumbnail.jpg" alt="imagen 2 del producto" id="img-min-2">
+      <img src="./images/image-product-3-thumbnail.jpg" alt="imagen 3 del producto" id="img-min-3">
+      <img src="./images/image-product-4-thumbnail.jpg" alt="imagen 4 del producto" id="img-min-4">
     </section>
     <!-- Seccion informativa del producto -->
     <section class="main-section2">
